--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "version": "0.1.0",
   "engines": { "node": ">= 0.4" },
   "dependencies": {
-    "async": ">= 0.1.10",
-    "express": ">= 2.4.7",
-    "jinjs": ">= 0.3.4",
     "nodeunit": ">= 0.5.3",
-    "ntf": ">= 0.1.0",
-    "redis": ">= 0.6.7",
-    "socket.io": ">= 0.8.7"
+    "ntf": ">= 0.1.0"
   },
   "repository": {
     "type": "git",
