--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "engines": { "node": ">= 0.4" },
   "dependencies": {
+    "async": ">= 0.1.15",
     "nodeunit": ">= 0.5.3",
     "ntf": ">= 0.1.0"
   },
