--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ntfd",
   "description": "Network Testing Framework Daemon",
   "version": "0.4.1",
+  "author": "Silas Sewell <silas@sewell.org>",
   "engines": { "node": ">= 0.4" },
   "dependencies": {
     "async": ">= 0.1.15",
