--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ntfd",
   "description": "Network Testing Framework Daemon",
   "version": "0.4.1",
-  "author": "Silas Sewell <silas@sewell.org>",
+  "author": "NTF Maintainers <ntf-maintainers@shutterstock.com>",
   "engines": { "node": ">= 0.4" },
   "dependencies": {
     "async": ">= 0.1.15",
@@ -11,8 +11,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/silas/ntfd.git"
+    "url": "http://github.com/shutterstock/ntfd.git"
   },
-  "bugs": { "url": "http://github.com/silas/ntfd/issues" },
+  "bugs": { "url": "http://github.com/shutterstock/ntfd/issues" },
   "main": "./lib"
 }
