chore: updated fields in the package.json
        - Check that nothing drastic happened in the `package.json`.
- Add some keywords to your package.json. We've added an empty `keywords` field for now.
- Check that the homepage in the `package.json` is OK. Another one besides your GitHub repo might work. We've set it to https://github.com/shutterstock/ntfd.
- Check that the bugs field in the package.json is OK. It doesn't match what we'd expect, which would be https://github.com/shutterstock/ntfd/issues
- We expected the repository url in the `package.json` to be https://github.com/shutterstock/ntfd, and it wasn't. Is this intentional?
- If there are more contributors, add them to the Contributors field in the `package.json`.
- Add some tests! There aren't any currently set. [Use this link to stub out an issue.](https://github.com/shutterstock/ntfd/issues/new?title=Add%20Tests&body=Tests%20are%20useful%20for%20ensuring%20code%20quality.%20No%20tests%20were%20found%20in%20the%20package%20manifest.)

--- a/package.json
+++ b/package.json
@@ -13,11 +13,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/shutterstock/ntfd.git"
+    "url": "https://github.com/shutterstock/ntfd.git"
   },
   "bugs": {
-    "url": "http://github.com/shutterstock/ntfd/issues"
+    "url": "https://github.com/shutterstock/ntfd/issues"
   },
   "main": "./lib",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": ["ntf", "daemon"],
+  "homepage": "https://github.com/shutterstock/ntfd",
+  "contributors": [
+    "NTF Maintainers <ntf-maintainers@shutterstock.com>",
+    "Silas Sewell <silas@sewell.org>",
+    "Richard Littauer <richard.littauer@gmail.com>",
+    "Carlos Gomez <carlos@cgenuity.com>",
+    "Curt Zirzow <czirzow@shutterstock.com>",
+    "Dan McCormick <dan@codeop.com>",
+    "czirzow <czirzow@gmail.com>"
+  ]
 }
